practice-exam-tracker-sfdx/force-app/main/default/objects/Attempt_Score__c/fields/Exam_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Exam_Attempt__c</fullName>
    <label>Exam Attempt</label>
    <referenceTo>Exam_Attempt__c</referenceTo>
    <relationshipLabel>Attempt Scores</relationshipLabel>
    <relationshipName>Attempt_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>