practice-exam-tracker-sfdx/force-app/main/default/objects/Attempt_Score__c/fields/Exam_Category__c.field-meta.xml
<CustomField>
    <fullName>Exam_Category__c</fullName>
    <label>Exam Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exam_Categories</valueSetName>
    </valueSet>
</CustomField>