practice-exam-tracker-sfdx/force-app/main/default/objects/Attempt_Score__c/fields/Weighted_Percent__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Percent__c</fullName>
    <label>Weighted Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>