practice-exam-tracker-sfdx/force-app/main/default/objects/Attempt_Score__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exam_Category__c</columns>
    <columns>Percent__c</columns>
    <columns>Weighted_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>